--- a/WebApp/Pages/Events/Create.cshtml
+++ b/WebApp/Pages/Events/Create.cshtml
@@ -12,17 +12,17 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Event.Naming" class="control-label">Nimetus</label>
+                <label asp-for="Event.Naming" class="control-label">Nimetus <span class="text-danger">*</span></label>
                 <input asp-for="Event.Naming" class="form-control" />
                 <span asp-validation-for="Event.Naming" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Event.StartsAt" class="control-label">Algus</label>
+                <label asp-for="Event.StartsAt" class="control-label">Algus <span class="text-danger">*</span></label>
                 <input asp-for="Event.StartsAt" type="datetime-local" value="" min="@DateTime.Now.ToString("yyyy-MM-ddTHH:mm")" class="form-control" />
                 <span asp-validation-for="Event.StartsAt" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Event.Place" class="control-label">Koht</label>
+                <label asp-for="Event.Place" class="control-label">Koht <span class="text-danger">*</span></label>
                 <input asp-for="Event.Place" class="form-control" />
                 <span asp-validation-for="Event.Place" class="text-danger"></span>
             </div>
